# amg-2013

AMG2013/: .gitignore  CMakeLists.txt  Makefile  Makefile.include  README
AMG2013/IJ_mv/: CMakeLists.txt
AMG2013/docs/: amg2013.readme
AMG2013/krylov/: CMakeLists.txt
AMG2013/parcsr_ls/: CMakeLists.txt  par_interp.c  par_jacobi_interp.c  par_lr_interp.c  par_multi_interp.c
AMG2013/parcsr_mv/: CMakeLists.txt  par_csr_communication.c
AMG2013/seq_mv/: CMakeLists.txt
AMG2013/sstruct_mv/: CMakeLists.txt
AMG2013/struct_mv/: CMakeLists.txt
AMG2013/test/: CMakeLists.txt  amg2013.c
AMG2013/utilities/: CMakeLists.txt
